Set up viewPager and tabLayout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,22 @@
     <string name="landing_date">Landing Date: %s</string>
     <string name="photo_info_content">Photo Info</string>
 
+    <string-array name="tabNames">
+        <item>Curiosity</item>
+        <item>Opportunity</item>
+        <item>Spirit</item>
+    </string-array>
+
+    <string name="FHAZ">FHAZ</string>
+    <string name="RHAZ">RHAZ</string>
+    <string name="MAST">MAST</string>
+    <string name="CHEMCAM">CHEMCAM</string>
+    <string name="MAHLI">MAHLI</string>
+    <string name="MARDI">MARDI</string>
+    <string name="NAVCAM">NAVCAM</string>
+    <string name="PANCAM">PANCAM</string>
+    <string name="MINITES">MINITES</string>
+
     <string-array name="curiosityFilterOptions">
         <item>FHAZ</item>
         <item>RHAZ</item>
